--- a/style.css
+++ b/style.css
@@ -5,45 +5,44 @@
   --background-black: #000;
   --background-white: #fff;
 }
-
 /* Basic CSS Reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 html,
 body {
   height: 100%;
   font-size: 100%;
   line-height: 1.5;
 }
-
 a {
   text-decoration: none;
   color: inherit;
 }
-
 ol,
 ul {
   list-style: none;
 }
-
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+h1 {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+p {
+  font-family: "Times New Roman", Times, serif;
+}
 
 /* Styling for reusable elements (General)*/
-
 /*Navbar*/
 .navigation-bar {
   background-color: black;
   color: var(--text-white);
   padding: 1rem 0 1rem 0;
 }
-
 .nav-list {
   display: flex;
   justify-content: space-between;
@@ -55,14 +54,10 @@ table {
 }
 .nav-list li {
   margin: 20px 10px;
-  font-size: 1.5rem;
-  font-family: "Times New Roman", Times, serif;
 }
-
 .nav-list li:first-child {
   margin-right: auto;
 }
-
 /* Hero section */
 .hero-section-container {
   background-color: var(--background-black);
@@ -71,25 +66,20 @@ table {
   padding-left: 11%;
   padding-right: 10%;
 }
-
 .hero-h2 {
   font-size: 3rem;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
-
 .hero-p {
   width: 50%;
   align-content: left;
   font-size: 1.2rem;
-  font-family: Arial, Helvetica, sans-serif;
 }
-
 /* My project section */
 .project-section-h1 {
   font-size: 3rem;
-  font-family: "Times New Roman", Times, serif;
   text-align: center;
   margin-bottom: 2rem;
 }
@@ -100,15 +90,12 @@ table {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
-
 .project-section-h1 {
   font-size: 3rem;
-  font-family: "Times New Roman", Times, serif;
   text-align: center;
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
-
 .grid-project-section {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -117,7 +104,6 @@ table {
   padding-left: 8%;
   padding-right: 8%;
 }
-
 .project-card {
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -125,19 +111,15 @@ table {
   margin-bottom: 1.5rem;
   box-shadow: var(--box-shadow);
 }
-
 .project-h2 {
   font-size: 1.5rem;
   color: var(--text-black);
   margin-bottom: 1.5rem;
-  font-family: "Times New Roman", Times, serif;
 }
-
 .project-card p {
   font-size: 1rem;
   margin-bottom: 1rem;
 }
-
 .portfolio-image {
   width: 100%;
   height: auto;
@@ -145,7 +127,6 @@ table {
   margin-top: 1rem;
   border-radius: 8px;
 }
-
 .button-dark {
   background-color: black;
   color: white;
@@ -159,11 +140,9 @@ table {
   text-align: center;
   margin: 2rem auto;
 }
-
 .see-more-button:hover {
   background-color: #333;
 }
-
 /* about me section */
 .about-me-section {
   background-color: var(--background-black);
@@ -176,21 +155,18 @@ table {
   padding-top: 70px;
   padding-bottom: 70px;
 }
-
 .about-me-h2 {
   color: var(--text-white);
   font-size: 3rem;
   margin-bottom: 1rem;
   text-align: left;
 }
-
 .about-me-p {
   color: var(--text-white);
   line-height: 1.6;
   margin-bottom: 1.5rem;
   font-size: 1.2rem;
 }
-
 .button-light {
   background-color: var(--background-white);
   color: var(--text-black);
@@ -203,12 +179,10 @@ table {
   display: inline-block;
   text-align: center;
 }
-
 .contact-me-button:hover {
   background-color: var(--text-white);
   color: var(--background-black);
 }
-
 .about-me-image {
   width: 100%;
   max-width: 400px;
@@ -217,7 +191,6 @@ table {
   box-shadow: var(--box-shadow);
   margin: auto;
 }
-
 /* Skills and technologies section */
 .my-skills-section {
   padding: 50px 10% 50px 10%;
@@ -225,7 +198,6 @@ table {
   display: grid;
   gap: 2rem;
 }
-
 .skill-section-h2 {
   font-size: 3rem;
   color: var(--text-black);
@@ -233,14 +205,12 @@ table {
   font-family: "Times New Roman", Times, serif;
   text-align: center;
 }
-
 .skill-group {
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 1rem;
   background-color: var(--text-white);
 }
-
 .skill-item {
   margin-bottom: 1rem;
   padding-left: 10px;
@@ -252,7 +222,6 @@ table {
   margin-bottom: 0.5rem;
   font-size: 1rem;
 }
-
 .progress-bar {
   background-color: #ddd;
   border-radius: 4px;
@@ -261,13 +230,11 @@ table {
   width: 100%;
   margin-bottom: 1rem;
 }
-
 .progress {
   background-color: #007bff;
   height: 100%;
   transition: width 0.3s;
 }
-
 /*  Project page Main section styling  */
 .project-main {
   background: linear-gradient(
@@ -279,21 +246,17 @@ table {
   padding: 2rem 10% 2rem 10%;
   color: var(--text-white);
 }
-
 .project-main h1 {
   font-size: 3rem;
-  font-family: "Times New Roman", Times, serif;
   text-align: center;
   margin-bottom: 2rem;
 }
-
 .my-project {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
   padding: 2rem;
 }
-
 /* Project card styling */
 .project-card {
   background-color: var(--background-white);
@@ -303,17 +266,14 @@ table {
   box-shadow: var(--box-shadow);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
 .project-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
-
 #project-button {
   display: inline-block;
   text-align: center;
 }
-
 /* Image styling */
 .project-card img {
   width: 100%;
@@ -321,13 +281,11 @@ table {
   border-radius: 8px;
   margin: 1rem 0;
 }
-
 /* Button styling */
 .button-dark:hover {
   background-color: rgb(23, 23, 23);
   color: black;
 }
-
 /* Contact me page */
 .form-and-map {
   background: linear-gradient(
@@ -343,23 +301,19 @@ table {
   gap: 2rem;
   align-items: start;
 }
-
 /* Contact Information and Map Styling */
 .contact-info {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-
 .contact-info p {
   margin: 0.5rem 0;
 }
-
 .contact-info a {
   color: var(--text-white);
   text-decoration: none;
 }
-
 .contact-info iframe {
   width: 100%;
   height: 350px;
@@ -367,30 +321,21 @@ table {
   margin-top: 1rem;
   border-radius: 8px;
 }
-
 /* Contact Form Styling */
 .contact-form {
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.9
-  ); /* Light background for the form */
+  background-color: rgba(255, 255, 255, 0.9);
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
 .contact-form form div {
   margin-bottom: 1rem;
 }
-
 .contact-form label {
   display: block;
   margin-bottom: 0.5rem;
   color: rgb(16, 16, 16);
 }
-
 .contact-form input,
 .contact-form textarea {
   width: 100%;
@@ -400,12 +345,10 @@ table {
   font-size: 1rem;
   box-sizing: border-box;
 }
-
 .contact-form textarea {
   height: 120px;
   resize: vertical;
 }
-
 #contact-form-button {
   display: inline-block;
   align-items: left;
@@ -415,28 +358,94 @@ table {
   color: black;
 }
 
-/* resume and experience section*/
+/*resume page....................................................... */
+
+.resume {
+  padding: 20px 10% 0 10%;
+}
+.profile {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.profile img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+.profile h1 {
+  font-size: 2.2rem;
+  margin: 10px 0;
+}
+.profile p {
+  font-size: 1rem;
+  margin: 5px 0;
+}
+/* Section Styles */
+.resume > hr {
+  border: 0;
+  border: 3px solid #000000;
+  border-radius: 10px;
+  margin: 5% 0;
+}
+/* Education Section */
+.education {
+  margin: 0 auto 40px;
+  width: 60%;
+  text-align: center;
+}
+.education h2 {
+  padding: 20px 0 20px 0;
+  font-size: 3rem;
+}
+.education ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.education li {
+  display: flex;
+  justify-content: space-between;
+  padding: 7px 0;
+}
+.education-year {
+  font-style: italic;
+  color: #3b3b3b;
+}
+/* Certificates and Projects */
+.certificates-projects {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.certificates-projects h2 {
+  padding: 20px 0 20px 0;
+  font-size: 3rem;
+}
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 1.5rem;
-  margin: 2rem 0;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
 }
-
 .grid-item {
-  background-color: var(--background-white);
-  padding: 1rem;
+  background-color: #f3f3f3;
+  padding: 15px;
   border-radius: 8px;
-  box-shadow: var(--box-shadow);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
 .grid-item h3 {
-  margin-bottom: 0.5rem;
-  font-size: 1.1rem;
-  color: var(--text-black);
+  font-size: 1.2rem;
+  margin-bottom: 5px;
 }
-
 .grid-item p {
+  font-size: 0.9rem;
   margin: 0;
-  color: var(--text-black);
+}
+/* Work Experience Section */
+.work-experience {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.work-experience h2 {
+  padding: 20px 0 20px 0;
+  font-size: 3rem;
 }
